--- a/main.html
+++ b/main.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rotating Line</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Line element that will rotate -->
   <div id="line"></div>
 
-  <script src="script.js"></script>
+  <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
-
